--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+	<link rel="stylesheet" href="css/custom.css">
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -9,7 +10,20 @@
 		<div class="row">
 	<h1 class="text-center">Ascent</h1>
 </div>
+	
+	<div class="col-xs-6">
+		<div class="row">
+		<p class="text-center">We connect your skills and interests to real-life opportunities.</p>
+	</div>
+	</div>
+
+	<div class="text-center">
+	<a href="interests.html"><button class="btn btn-large btn-primary text-center">I'm in!</button></a>
 </div>
+
+</div>
+
+
 </body>
 
 </html>
