edited landing page and changed font sizes for web responsiveness

--- a/index.html
+++ b/index.html
@@ -1,28 +1,31 @@
 <html>
 <head>
-	<link rel="stylesheet" href="css/custom.css">
-	<link rel="stylesheet" href="css/bootstrap.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	
+	<link rel="stylesheet" href="css/bootstrap.css">
+	<link rel="stylesheet" href="css/custom.css">
+
+	<style>
+	.table {
+		display: table;
+		height: 100%;
+	}
+	#text-overlay {
+		display: table-cell;
+		vertical-align: middle;
+	}
+
+	</style>
 </head>
 
 <body>
-	<div class="container">
-		<div class="row">
-	<h1 class="text-center">Ascent</h1>
-</div>
-	
-	<div class="col-xs-6">
-		<div class="row">
-		<p class="text-center">We connect your skills and interests to real-life opportunities.</p>
+	<div class="container text-center table">
+		<div id="text-overlay">
+			<h1>Ascent</h1>
+			<p>Do what excites you - <br>we'll help you soar.</p>
+			<a href="interests.html"><button class="btn btn-large btn-primary">I'm in!</button></a>
+		</div>
 	</div>
-	</div>
-
-	<div class="text-center">
-	<a href="interests.html"><button class="btn btn-large btn-primary text-center">I'm in!</button></a>
-</div>
-
-</div>
-
 
 </body>
 
