--- a/listings.html
+++ b/listings.html
@@ -7,7 +7,7 @@
 
 <body>
 <div class="container">
-	<h1>Gigs You Might Like</h1>
+	<h1>Activities You Might Like</h1>
 	<div class="gig-posting">
 		<h3>Design a website</h3>
 		<p>Nonprofit dance4life is looking for eager individual to create an online platform. <br>Payment based on experience.</p>
