--- a/interests.html
+++ b/interests.html
@@ -29,6 +29,8 @@
 		height: 115px;
 		margin-left: auto;
 		margin-right: auto;
+		border: 2px solid #f1f1f1;
+		border-radius: 0px;
 	}
 	</style>
 </head>
