--- a/listings.html
+++ b/listings.html
@@ -49,9 +49,21 @@
 	</div>
 
 	<nav class="navbar-fixed-bottom" role="navigation">
-		<a href="listings.html" id="menu"><button type="button" class="nav-button btn btn-large" aria-hidden="true"><i class="glyphicon glyphicon-menu-hamburger"></i></button></a>
-		<a href="search.html" id="search"><button type="button" class="nav-button btn btn-large" aria-hidden="true"><i class="glyphicon glyphicon-search"></i></button></a>
-		<a href="user.html" id="profile"><button type="button" class="nav-button btn btn-large" aria-hidden="true"><i class="glyphicon glyphicon-user"></i></button></a>
+		<a href="listings.html" id="menu">
+			<button type="button" class="nav-button btn btn-large" aria-hidden="true">
+				<i class="glyphicon glyphicon-menu-hamburger"></i>
+			</button>
+		</a>
+		<a href="search.html" id="search">
+			<button type="button" class="nav-button btn btn-large" aria-hidden="true">
+				<i class="glyphicon glyphicon-search"></i>
+			</button>
+		</a>
+		<a href="user.html" id="profile">
+			<button type="button" class="nav-button btn btn-large" aria-hidden="true">
+				<i class="glyphicon glyphicon-user"></i>
+			</button>
+		</a>
 	</nav>
 
 	<script language="javascript" type="text/javascript" src="js/jquery-1.11.3.min.js"></script>
