changing color and sizing of nav bar

--- a/listings.html
+++ b/listings.html
@@ -3,6 +3,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="css/custom.css">
+
 </head>
 
 <body>
@@ -46,6 +47,9 @@
 			<p>Local small business needs a well-designed flyer to announce upcoming sale. </p>
 			<button class="btn btn-primary">I'm interested!</button>
 		</div>
+
+		<!-- roughly the height of the nav -->
+		<div style="height: 30px"></div>
 	</div>
 
 	<nav class="navbar-fixed-bottom" role="navigation">
