--- a/interests.html
+++ b/interests.html
@@ -36,7 +36,7 @@
 		border-radius: 0px;
 	}
 	.tile-text {
-		font-size: 1.5em;
+		font-size: 1.25em;
 		vertical-align: middle;
 	}
 	#other {
@@ -50,7 +50,11 @@
 
 	@media (min-width: 768px) {
 		.tile-text {
-			font-size: 1.2em;
+			font-size: 1em;
+		}
+		.tile {
+			width: 125px;
+			height: 125px;
 		}
 	}
 
@@ -61,9 +65,6 @@
 		.tile {
 			width: 150px;
 			height: 150px;
-		}
-		.tile-text {
-			font-size: 1em;
 		}
 	}
 	</style>
