--- a/interests.html
+++ b/interests.html
@@ -79,8 +79,8 @@
 				<div class="interest-grid">
 					<div class="row">
 						<div class="col-xs-6">
-							<div class="thumbnail tile tile-orange" id="square">
-								<div class="table">
+							<div class="thumbnail tile">
+								<div class="table" id="tile-html">
 									<p class="cell tile-text">html</p>
 								</div>
 							</div>
