--- a/listings.html
+++ b/listings.html
@@ -4,6 +4,13 @@
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="css/custom.css">
 
+	<style>
+
+	button#home {
+		background-color: #e5e5e5;
+	}
+	</style>
+
 </head>
 
 <body>
@@ -54,12 +61,12 @@
 
 	<nav class="navbar-fixed-bottom" role="navigation">
 		<a href="listings.html" id="menu">
-			<button type="button" class="nav-button btn btn-large" aria-hidden="true">
+			<button id="home" type="button" class="nav-button btn btn-large" aria-hidden="true">
 				<i class="glyphicon glyphicon-menu-hamburger"></i>
 			</button>
 		</a>
 		<a href="search.html" id="search">
-			<button type="button" class="nav-button btn btn-large" aria-hidden="true">
+			<button id="explore" type="button" class="nav-button btn btn-large" aria-hidden="true">
 				<i class="glyphicon glyphicon-search"></i>
 			</button>
 		</a>
