--- a/search.html
+++ b/search.html
@@ -1,33 +1,49 @@
 <html>
 <head>
-	<link rel="stylesheet" href="css/custom.css">
-	<link rel="stylesheet" href="css/bootstrap.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="css/bootstrap.css">
+	<link rel="stylesheet" href="css/custom.css">
+
+	<style>
+	button#explore {
+		background-color: #e5e5e5;
+	}
+	</style>
 </head>
 
 <body>
-<div class="container">
-	<h1>Explore your interests!</h1>
-	<div class="col-xs-12">
-    <div class="input-group">
-      <input type="text" class="form-control" placeholder="Search for...">
-      <span class="input-group-btn">
-        <button class="btn btn-default" type="button">Go!</button>
-      </span>
-    </div><!-- /input-group -->
-  </div><!-- /.col-lg-6 -->
-</div>
+	<div class="container">
+		<h1>Explore your interests!</h1>
+		<div class="col-xs-12">
+		    <div class="input-group">
+		      <input type="text" class="form-control" placeholder="Search for...">
+		      <span class="input-group-btn">
+		        <button class="btn btn-default" type="button">Go!</button>
+		      </span>
+		    </div><!-- /input-group -->
+	  	</div><!-- /.col-lg-6 -->
+	</div>
 
- <nav class="navbar-fixed-bottom" role="navigation">
-	      <a href="listings.html" id="menu"><button type="button" class="nav-button btn btn-large" aria-hidden="true"><i class="glyphicon glyphicon-menu-hamburger"></i></button></a>
-	      <a href="search.html" id="search"><button type="button" class="nav-button btn btn-large" aria-hidden="true"><i class="glyphicon glyphicon-search"></i></button></a>
-	      <a href="user.html" id="profile"><button type="button" class="nav-button btn btn-large" aria-hidden="true"><i class="glyphicon glyphicon-user"></i></button></a>
- 		</div>
-</div>
-</nav>
+	<nav class="navbar-fixed-bottom" role="navigation">
+		<a href="listings.html" id="menu">
+			<button id="home" type="button" class="nav-button btn btn-large" aria-hidden="true">
+				<i class="glyphicon glyphicon-menu-hamburger"></i>
+			</button>
+		</a>
+		<a href="search.html" id="search">
+			<button id="explore" type="button" class="nav-button btn btn-large" aria-hidden="true">
+				<i class="glyphicon glyphicon-search"></i>
+			</button>
+		</a>
+		<a href="user.html" id="profile">
+			<button type="button" class="nav-button btn btn-large" aria-hidden="true">
+				<i class="glyphicon glyphicon-user"></i>
+			</button>
+		</a>
+	</nav>
 
-<script language="javascript" type="text/javascript" src="js/jquery-1.11.3.min.js"></script>
-<script language="javascript" type="text/javascript" src="js/bootstrap.min.js"></script>
+	<script language="javascript" type="text/javascript" src="js/jquery-1.11.3.min.js"></script>
+	<script language="javascript" type="text/javascript" src="js/bootstrap.min.js"></script>
 </body>
 
 </html>
