--- a/interests.html
+++ b/interests.html
@@ -48,6 +48,13 @@
 		width: 100%;
 	}
 
+	@media (min-width: 375px) {
+		.tile {
+			width: 125px;
+			height: 125px;
+		}
+	}
+
 	@media (min-width: 768px) {
 		.tile-text {
 			font-size: 1em;
