--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
 	<link rel="stylesheet" href="css/custom.css">
 
 	<style>
+	h1#ascent {
+		font-size: 5.5em;
+	}
+	p#description {
+		font-size: 1.75em;
+		line-height: 1.5em;
+	}
+	p#slogan {
+		font-size: 2em;
+		line-height: 1.75em;
+		text-transform: uppercase;
+	}
 	.table {
 		display: table;
 		height: 100%;
@@ -29,11 +41,12 @@
 	<div class="container text-center table">
 		<div id="text-overlay">
 			<div id="title-wrap">
-				<h1>Ascent</h1>
+				<h1 id="ascent">Ascent</h1>
+				<p id="description">a hub of opportunities</p>
 				<hr>
-				<p>Do what excites you - <br>we'll help you soar.</p>
+				<p id="slogan">we connect.<br>you decide.</p>
 				<br>
-				<a href="interests.html"><button id="enter" class="btn btn-large btn-primary">I'm in!</button></a>
+				<a href="interests.html"><button id="enter" class="btn btn-large btn-primary">OK, let's go!</button></a>
 			</div>
 		</div>
 	</div>
