--- a/interests.html
+++ b/interests.html
@@ -2,15 +2,21 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href='https://fonts.googleapis.com/css?family=Oswald:400,700' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="css/custom.css">
 
 
 	<style>
-	#enjoy {
-		margin-top: 30px;
-		margin-bottom: 30px;
+	p.description {
+		font-size: 1.75em;
+		line-height: 1.5em;
+	}
+
+
+	h2#engage {
+		font-size: 2.25em;
 		text-transform: uppercase;
 	}
 	.table {
@@ -21,22 +27,21 @@
 		display: table-cell;
 		vertical-align: middle;
 	}
-	.interest-content {
-		padding: 0px 30px;
+	#interest-content {
+		padding: 25px 0px;
 	}
 	.interest-grid {
-		max-width: 250px;
 		height: auto;
 		margin: auto;
 	}
 
 	.tile {
-		width: 100px;
-		height: 100px;
-		margin-left: auto;
-		margin-right: auto;
-		border: 2px solid #f1f1f1;
+		width: 125px;
+		height: 125px;
+		margin: 0px 5px;
+		border: 3px solid #f1f1f1;
 		border-radius: 0px;
+		display: inline-block;
 	}
 	.tile-text {
 		font-size: 1.25em;
@@ -53,8 +58,8 @@
 
 	@media (min-width: 375px) {
 		.tile {
-			width: 125px;
-			height: 125px;
+			width: 160px;
+			height: 160px;
 		}
 	}
 
@@ -63,18 +68,15 @@
 			font-size: 1em;
 		}
 		.tile {
-			width: 125px;
-			height: 125px;
+			width: 175px;
+			height: 175px;
 		}
 	}
 
 	@media (min-width: 1200px) {
-		.interest-grid {
-			max-width: 350px;
-		}
 		.tile {
-			width: 150px;
-			height: 150px;
+			width: 200px;
+			height: 200px;
 		}
 	}
 	</style>
@@ -82,66 +84,52 @@
 
 <body>
 	<div class="container text-center">
-		<div class="table">
-			<div class="cell interest-content">
-				<h2 id="enjoy">Engage your interests.</h1>
-
-				<div class="interest-grid">
-					<div class="row">
-						<div class="col-xs-6">
-							<div class="thumbnail tile">
-								<div class="table" id="tile-html">
-									<p class="cell tile-text">html</p>
-								</div>
-							</div>
-						</div>
-						<div class="col-xs-6">
-							<div class="thumbnail tile tile-magenta">
-								<div class="table">
-									<p class="cell tile-text">design</p>
-								</div>
-							</div>
+		<div id="interest-content">
+			<h2 id="engage">Engage your interests</h2>
+			<p>Help us learn more about the cool person that you are to get you opportunities best suited for you.</p>
+			<br>
+			<div class="interest-grid">
+				<div class="row">
+					<div class="tile">
+						<div class="table" id="tile-html">
+							<h3 class="cell tile-text">html</h3>
 						</div>
 					</div>
-					<div class="row">
-						<div class="col-xs-6">
-							<div class="thumbnail tile tile-turquoise">
-								<div class="table">
-									<p class="cell tile-text">drawing</p>
-								</div>
-							</div>
-						</div>
-						<div class="col-xs-6">
-							<div class="thumbnail tile tile-pink">
-								<div class="table">
-									<p class="cell tile-text">teaching</p>
-								</div>
-							</div>
+					<div class="tile tile-magenta">
+						<div class="table">
+							<h3 class="cell tile-text">design</h3>
 						</div>
 					</div>
-					<div class="row">
-						<div class="col-xs-6">
-							<div class="thumbnail tile tile-blue">
-								<div class="table">
-									<p class="cell tile-text">music</p>
-								</div>
-							</div>
-						</div>
-						<div class="col-xs-6">
-							<div class="thumbnail tile tile-orange">
-								<div class="table">
-									<p class="cell tile-text">dance</p>
-								</div>
-							</div>
-						</div>
-					</div>
-					<p>Interests not listed? Add them in!</p>
-					<input id="other" type="text" placeholder="Separate multiple with commas"><br><br>
-					<a href="listings.html"><button id="submit" class="btn btn-large btn-primary">Submit</button></a>
 				</div>
-				<br>
-			</div><!--/.cell-->
-		</div><!--/.table-->
+				<div class="row">
+					<div class="tile tile-turquoise">
+						<div class="table">
+							<h3 class="cell tile-text">drawing</h3>
+						</div>
+					</div>
+					<div class="tile tile-pink">
+						<div class="table">
+							<h3 class="cell tile-text">teaching</h3>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="tile tile-blue">
+						<div class="table">
+							<h3 class="cell tile-text">music</h3>
+						</div>
+					</div>
+					<div class="tile tile-orange">
+						<div class="table">
+							<h3 class="cell tile-text">dance</h3>
+						</div>
+					</div>
+				</div>
+				<p>Interests not listed? Add them in!</p>
+				<input id="other" type="text" placeholder="Separate multiple with commas"><br><br>
+				<a href="listings.html"><button id="submit" class="btn btn-large btn-primary">Submit</button></a>
+			</div><!--/.interest-grid-->
+		</div><!--/.interest-content-->
 
 	</div><!--/.container-->
 
