--- a/user.html
+++ b/user.html
@@ -12,16 +12,41 @@
 	</style>
 </head>
 
-<body>
-	<div class="container text-center">
+<body onload="setPages()">
+	<div class="text-center">
 		<h1>Joe Schmoe</h1>
-		<div class="col-xs-12">
-	   		<a href="user-saved.html"><button class="btn btn-large btn-success">My Saved Activities</button></a>
-	   	</div>
-	   	<div class="col-xs-12">
-	   		<button class="btn btn-large btn-primary top-margin">My Interests</button>
-	   	</div>
 	</div>
+
+		<ul class="nav nav-tabs">
+  <li role="presentation" id="basic-info-tab" class="active"><a href="#">Basic Info</a></li>
+  <li role="presentation" id="saved-tab"><a href="#">Saved</a></li>
+  <li role="presentation" id="history-tab"><a href="#">History</a></li>
+</ul>
+
+
+<div class="container">
+	<div id="basic-info">
+		<p>
+			Name<br>
+			E-mail<br>
+			Education</br>
+		</p>
+	</div>
+
+		<div id="saved">
+		<p>
+			Interests
+		</p>
+	</div>
+
+			<div id="history">
+		<p>
+			History
+		</p>
+	</div>
+
+<div>
+
 
 	<nav class="navbar-fixed-bottom" role="navigation">
 		<a href="listings.html" id="menu">
@@ -42,6 +67,7 @@
 	</nav>
 
 	<script language="javascript" type="text/javascript" src="js/jquery-1.11.3.min.js"></script>
+		<script language="javascript" type="text/javascript" src="js/custom.js"></script>
 	<script language="javascript" type="text/javascript" src="js/bootstrap.min.js"></script>
 </body>
 
