--- a/interests.html
+++ b/interests.html
@@ -7,7 +7,6 @@
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="css/custom.css">
 
-
 	<style>
 	p.description {
 		font-size: 1.75em;
@@ -27,12 +26,12 @@
 /*		display: table-cell;*/
 		vertical-align: middle;
 	}
-	#interest-content {
-		padding: 25px 0px;
-	}
 	.interest-grid {
 		height: auto;
 		margin: auto;
+	}
+	#interest-content {
+		padding: 25px 0px;
 	}
 
 /*	.tile {
@@ -97,10 +96,11 @@
 
 <body>
 	<div class="container text-center">
-		<div id="interest-content">
+		<section id="interest-content">
 			<h2 id="engage">Ignite your Interests</h2>
-			<p>Help us learn more about the cool person that you are to get you opportunities best suited for you.</p>
+			<p>Help us learn more about the cool person that you are to get you cool opportunities.</p>
 			<br>
+
 			<div class="interest-grid">
 				<div class="row">
 					<div class="checkbox" id="tile-html">
@@ -117,7 +117,7 @@
 
 				<div class="row">
 					<div class="checkbox" id="tile-turquoise">
-						<h3 class="cell tile-text">design</h3>
+						<h3 class="cell tile-text">drawing</h3>
 						<input type="checkbox" id="cb3" name="cb3" />
 						<label for="cb3"></label>
 					</div>
@@ -144,11 +144,11 @@
 				</div>
 
 
-				<p>Interests not listed? Add them in!</p>
+				<p>Interests not listed? Let us know!</p>
 				<input id="other" type="text" placeholder="Separate multiple with commas"><br><br>
 				<a href="listings.html"><button id="submit" class="btn btn-large btn-primary">Submit</button></a>
 			</div><!--/.interest-grid-->
-		</div><!--/.interest-content-->
+		</section>
 
 	</div><!--/.container-->
 
