--- a/interests.html
+++ b/interests.html
@@ -6,6 +6,9 @@
 
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="css/custom.css">
+	<link rel="stylesheet" type="text/css" href="css/component.css" />
+	<script src="js/modernizr.custom.js"></script>
+
 
 	<style>
 	p.description {
@@ -13,48 +16,28 @@
 		line-height: 1.5em;
 	}
 
-
 	h2#engage {
 		font-size: 2.25em;
 		text-transform: uppercase;
 	}
+
 	.table {
 		display: table;
 		height: 100%;
 	}
 	.cell {
-/*		display: table-cell;*/
+		display: table-cell;
 		vertical-align: middle;
 	}
+
 	.interest-grid {
 		height: auto;
 		margin: auto;
 	}
 	#interest-content {
 		padding: 25px 0px;
-	}
+	}	
 
-/*	.tile {
-		width: 125px;
-		height: 125px;
-		margin: 0px 5px;
-		border: 3px solid #f1f1f1;
-		border-radius: 0px;
-		display: inline-block;
-	}
-
-
-	.tile:hover {
-		background-color: rgba(0, 0, 0, 0.5);
-	}
-
-	.tile:after {
-		-moz-transform: scale(0.5);
-		-ms-transform: scale(0.5);
-		-webkit-transform: scale(0.5);
-		transform: scale(0.5);
-	}
-	*/
 	.tile-text {
 		font-size: 1.25em;
 		vertical-align: middle;
@@ -68,89 +51,90 @@
 		width: 100%;
 	}
 
-	@media (min-width: 375px) {
-		.checkbox, .checkbox label {
-			width: 160px;
-			height: 160px;
-		}
-	}
 
 	@media (min-width: 768px) {
 		.tile-text {
 			font-size: 1em;
 		}
-		.checkbox, .checkbox label {
-			width: 175px;
-			height: 175px;
-		}
 	}
 
-	@media (min-width: 1200px) {
-		.checkbox, .checkbox label {
-			width: 200px;
-			height: 200px;
-		}
-	}
 	</style>
 </head>
 
 <body>
 	<div class="container text-center">
 		<section id="interest-content">
-			<h2 id="engage">Ignite your Interests</h2>
-			<p>Help us learn more about the cool person that you are to get you cool opportunities.</p>
-			<br>
+			<form class="ac-custom ac-checkbox ac-checkmark" autocomplete="off">
+				<h2 id="engage">Ignite your Interests</h2>
+				<p>Help us learn more about the cool person that you are to get you cool opportunities.</p>
+				<br>
 
-			<div class="interest-grid">
-				<div class="row">
-					<div class="checkbox" id="tile-html">
-						<h3 class="cell tile-text">html</h3>
-						<input type="checkbox" id="cb" name="cb" />
-						<label for="cb"></label>
-					</div>
-					<div class="checkbox" id="tile-magenta">
-						<h3 class="cell tile-text">design</h3>
-						<input type="checkbox" id="cb2" name="cb2" />
-						<label for="cb2"></label>
-					</div>
-				</div>
-
-				<div class="row">
-					<div class="checkbox" id="tile-turquoise">
-						<h3 class="cell tile-text">drawing</h3>
-						<input type="checkbox" id="cb3" name="cb3" />
-						<label for="cb3"></label>
+				<div class="interest-grid">
+					<div class="row">
+						<div class="checkbox" id="tile-html">
+							<div class="table">
+								<h3 class="cell tile-text">html</h3>
+							</div>
+							<input id="cb1" name="cb6" type="checkbox">
+							<label for="cb1"></label>
+						</div>
+						<div class="checkbox" id="tile-magenta">
+							<div class="table">
+								<h3 class="cell tile-text">design</h3>
+							</div>
+							<input type="checkbox" id="cb2" name="cb2" />
+							<label for="cb2"></label>
+						</div>
 					</div>
 
-					<div class="checkbox" id="tile-pink">
-						<h3 class="cell tile-text">teaching</h3>
-						<input type="checkbox" id="cb4" name="cb4" />
-						<label for="cb4"></label>
+					<div class="row">
+						<div class="checkbox" id="tile-turquoise">
+							<div class="table">
+								<h3 class="cell tile-text">drawing</h3>
+							</div>
+								<input type="checkbox" id="cb3" name="cb3" />
+								<label for="cb3"></label>
+						</div>
+
+						<div class="checkbox" id="tile-pink">
+							<div class="table">
+								<h3 class="cell tile-text">teaching</h3>
+							</div>
+							<input type="checkbox" id="cb4" name="cb4" />
+							<label for="cb4"></label>
+						</div>
 					</div>
-				</div>
 
-				<div class="row">
-					<div class="checkbox" id="tile-blue">
-						<h3 class="cell tile-text">music</h3>
-						<input type="checkbox" id="cb5" name="cb5" />
-						<label for="cb5"></label>
+					<div class="row">
+						<div class="checkbox" id="tile-blue">
+							<div class="table">
+								<h3 class="cell tile-text">music</h3>
+							</div>
+							<input type="checkbox" id="cb5" name="cb5" />
+							<label for="cb5"></label>
+						</div>
+
+						<div class="checkbox" id="tile-orange">
+							<div class="table">
+								<h3 class="cell tile-text">dance</h3>
+							</div>
+							<input type="checkbox" id="cb6" name="cb6" />
+							<label for="cb6"></label>
+						</div>
 					</div>
 
-					<div class="checkbox" id="tile-orange">
-						<h3 class="cell tile-text">dance</h3>
-						<input type="checkbox" id="cb6" name="cb6" />
-						<label for="cb6"></label>
-					</div>
-				</div>
 
+					<p>Interests not listed? Let us know!</p>
+					<input id="other" type="text" placeholder="Separate multiple with commas"><br><br>
+					<a href="listings.html"><button id="submit" class="btn btn-large btn-primary">Submit</button></a>
+				</div><!--/.interest-grid-->
 
-				<p>Interests not listed? Let us know!</p>
-				<input id="other" type="text" placeholder="Separate multiple with commas"><br><br>
-				<a href="listings.html"><button id="submit" class="btn btn-large btn-primary">Submit</button></a>
-			</div><!--/.interest-grid-->
+			</form>
 		</section>
 
 	</div><!--/.container-->
+
+	<script src="js/svgcheckbx.js"></script>
 
 </body>
 
