--- a/interests.html
+++ b/interests.html
@@ -36,7 +36,7 @@
 		margin: auto;
 	}
 	#interest-content {
-		padding: 25px 0px;
+		padding: 1em 0.5em;
 	}	
 
 	.tile-text {
@@ -65,11 +65,10 @@
 <body>
 	<div class="container text-center">
 		<section id="interest-content">
+			<h2 id="engage">Ignite your Interests</h2>
+			<p>Help us learn more about the cool person that you are to get you cool opportunities.</p>
+			<br>
 			<form class="ac-custom ac-checkbox ac-checkmark" autocomplete="off">
-				<h2 id="engage">Ignite your Interests</h2>
-				<p>Help us learn more about the cool person that you are to get you cool opportunities.</p>
-				<br>
-
 				<div class="interest-grid">
 					<div class="row">
 						<div class="checkbox" id="tile-html">
@@ -127,10 +126,10 @@
 
 					<p>Interests not listed? Let us know!</p>
 					<input id="other" type="text" placeholder="Separate multiple with commas"><br><br>
-					<a href="listings.html"><button id="submit" class="btn btn-large btn-primary">Submit</button></a>
+					<!--<input type="submit" value="Continue">-->
 				</div><!--/.interest-grid-->
-
 			</form>
+			<a href="listings.html"><button id="submit" class="btn btn-large btn-primary">Continue</button></a>
 		</section>
 
 	</div><!--/.container-->
