editing interests page continue button

--- a/interests.html
+++ b/interests.html
@@ -36,7 +36,7 @@
 		margin: auto;
 	}
 	#interest-content {
-		padding: 1em 0.5em;
+		padding: 1em 0.5em 2em 0.5em;
 	}	
 
 	.tile-text {
@@ -50,6 +50,7 @@
 	#submit {
 		display: block;
 		width: 100%;
+		padding: 20px 0;
 	}
 
 
@@ -125,14 +126,15 @@
 
 
 					<p>Interests not listed? Let us know!</p>
-					<input id="other" type="text" placeholder="Separate multiple with commas"><br><br>
+					<input id="other" type="text" placeholder="Separate multiple with commas">
 					<!--<input type="submit" value="Continue">-->
 				</div><!--/.interest-grid-->
 			</form>
-			<a href="listings.html"><button id="submit" class="btn btn-large btn-primary">Continue</button></a>
 		</section>
 
 	</div><!--/.container-->
+
+	<a href="listings.html"><button id="submit" class="btn btn-large btn-primary">Continue</button></a>
 
 	<script src="js/svgcheckbx.js"></script>
 
