editing font size

--- a/index.html
+++ b/index.html
@@ -11,13 +11,12 @@
 		font-size: 5.5em;
 	}
 	p#description {
-		font-size: 1.75em;
+		font-size: 1.25em;
 		line-height: 1.5em;
 	}
-	p#slogan {
-		font-size: 2em;
+	h2#slogan {
+		font-size: 1.5em;
 		line-height: 1.75em;
-		text-transform: uppercase;
 	}
 	.table {
 		display: table;
@@ -43,9 +42,9 @@
 		<div id="text-overlay">
 			<div id="title-wrap">
 				<h1 id="ascent">Ascent</h1>
-				<p id="description">a hub of opportunities</p>
+				<p id="description">a hub of opportunities.</p>
 				<hr>
-				<p id="slogan">we connect.<br>you decide.</p>
+				<h2 id="slogan">We connect.<br>You decide.</h2>
 				<br>
 				<a href="interests.html"><button id="enter" class="btn btn-large btn-primary">OK, let's go!</button></a>
 			</div>
