editing mobile nav bar

--- a/interests.html
+++ b/interests.html
@@ -11,24 +11,10 @@
 
 
 	<style>
-	p.description {
-		font-size: 1.75em;
-		line-height: 1.5em;
-	}
-
 	h2#engage {
 		font-size: 2.25em;
 		line-height: 1.35em;
 		text-transform: uppercase;
-	}
-
-	.table {
-		display: table;
-		height: 100%;
-	}
-	.cell {
-		display: table-cell;
-		vertical-align: middle;
 	}
 
 	.interest-grid {
@@ -50,7 +36,7 @@
 	#submit {
 		display: block;
 		width: 100%;
-		padding: 20px 0;
+		padding: 1.5em 0;
 	}
 
 
