--- a/interests.html
+++ b/interests.html
@@ -11,12 +11,6 @@
 
 
 	<style>
-	h2#engage {
-		font-size: 2.25em;
-		line-height: 1.35em;
-		text-transform: uppercase;
-	}
-
 	.interest-grid {
 		height: auto;
 		margin: auto;
@@ -52,7 +46,7 @@
 <body>
 	<div class="container text-center">
 		<section id="interest-content">
-			<h2 id="engage">Ignite your Interests</h2>
+			<h2>Ignite your Interests</h2>
 			<p>Help us learn more about the cool person that you are to get you cool opportunities.</p>
 			<br>
 			<form class="ac-custom ac-checkbox ac-checkmark" autocomplete="off">
