some more styling to headers

--- a/interests.html
+++ b/interests.html
@@ -16,7 +16,8 @@
 		margin: auto;
 	}
 	#interest-content {
-		padding: 1em 0.5em 2em 0.5em;
+		padding-top: 1em;
+		padding-bottom: 2em;
 	}	
 
 	.tile-text {
@@ -46,9 +47,9 @@
 <body>
 	<div class="container text-center">
 		<section id="interest-content">
-			<h2>Ignite your Interests</h2>
+			<h2>Ignite<span> your Interests.</span></h2>
+			<hr>
 			<p>Help us learn more about the cool person that you are to get you cool opportunities.</p>
-			<br>
 			<form class="ac-custom ac-checkbox ac-checkmark" autocomplete="off">
 				<div class="interest-grid">
 					<div class="row">
