larger tiles on iphone 6, more spacing under description in interests page

--- a/interests.html
+++ b/interests.html
@@ -11,14 +11,19 @@
 
 
 	<style>
+	#interest-content {
+		padding-top: 1em;
+		padding-bottom: 2em;
+	}
+
+	p#description, .row {
+		padding-bottom: 1em;
+	}
+
 	.interest-grid {
 		height: auto;
 		margin: auto;
 	}
-	#interest-content {
-		padding-top: 1em;
-		padding-bottom: 2em;
-	}	
 
 	.tile-text {
 		font-size: 1.25em;
@@ -49,7 +54,7 @@
 		<section id="interest-content">
 			<h2>Ignite<span> your Interests.</span></h2>
 			<hr>
-			<p>Help us learn more about the cool person that you are to get you cool opportunities.</p>
+			<p id="description">Help us learn more about the cool person that you are to get you cool opportunities.</p>
 			<form class="ac-custom ac-checkbox ac-checkmark" autocomplete="off">
 				<div class="interest-grid">
 					<div class="row">
