--- a/interests.html
+++ b/interests.html
@@ -12,7 +12,7 @@
 
 	<style>
 	#interest-content {
-		padding-top: 1em;
+		padding-top: 6em;
 		padding-bottom: 2em;
 	}
 
@@ -51,9 +51,10 @@
 
 <body>
 	<div class="container text-center">
-		<section id="interest-content">
+		<div class="navbar-fixed-top white-bkgrd">
 			<h2>Ignite<span> your Interests.</span></h2>
-			<hr>
+		</div>
+		<section id="interest-content">
 			<p id="description">Help us learn more about the cool person that you are to get you cool opportunities.</p>
 			<form class="ac-custom ac-checkbox ac-checkmark" autocomplete="off">
 				<div class="interest-grid">
