editing landing page

--- a/index.html
+++ b/index.html
@@ -17,16 +17,18 @@
 	h2#slogan {
 		font-size: 1.5em;
 		line-height: 1.75em;
+		color: #f1f1f1;
 	}
 	#toInterests {
 		display: block;
 		position: absolute;
 		bottom: 0;
 		width: 100%;
+		font-size: 1.5em;
 	}
 	#enter {
 		width: 100%;
-		padding: 1.5em 0;
+		padding: 0.75em 0;
 	}
 
 	</style>
@@ -38,7 +40,6 @@
 			<div id="title-wrap">
 				<h1 id="ascent">Ascent</h1>
 				<p id="description">A hub of opportunities.</p>
-				<hr>
 				<h2 id="slogan">We connect. You decide.</h2>
 				<br>
 			</div>
