fixing bottom buttons

--- a/index.html
+++ b/index.html
@@ -17,18 +17,10 @@
 	h2#slogan {
 		font-size: 1.5em;
 		line-height: 1.75em;
-		color: #f1f1f1;
 	}
-	#toInterests {
-		display: block;
+	a.bottom-btn {
 		position: absolute;
 		bottom: 0;
-		width: 100%;
-		font-size: 1.5em;
-	}
-	#enter {
-		width: 100%;
-		padding: 0.75em 0;
 	}
 
 	</style>
@@ -43,7 +35,7 @@
 				<h2 id="slogan">We connect. You decide.</h2>
 				<br>
 			</div>
-			<a id="toInterests" href="interests.html"><button id="enter" class="btn btn-large btn-primary">OK, let's go!</button></a>
+			<a class="bottom-btn" href="interests.html"><button id="enter" class="btn btn-large btn-primary">OK, let's go!</button></a>
 		</div>
 	</div>
 </body>
