--- a/interests.html
+++ b/interests.html
@@ -12,7 +12,7 @@
 
 	<style>
 	#interest-content {
-		padding-top: 6em;
+		padding-top: 1em;
 		padding-bottom: 2em;
 	}
 
@@ -32,11 +32,7 @@
 	#other {
 		width: 100%;
 		color: #292929;
-	}
-	#submit {
-		display: block;
-		width: 100%;
-		padding: 1.5em 0;
+		font-size: 1em;
 	}
 
 
@@ -51,10 +47,8 @@
 
 <body>
 	<div class="container text-center">
-		<div class="navbar-fixed-top white-bkgrd">
-			<h2>Ignite<span> your Interests.</span></h2>
-		</div>
 		<section id="interest-content">
+			<h2>Ignite<span> your Interests.</span></h2>
 			<p id="description">Help us learn more about the cool person that you are to get you cool opportunities.</p>
 			<form class="ac-custom ac-checkbox ac-checkmark" autocomplete="off">
 				<div class="interest-grid">
@@ -114,14 +108,13 @@
 
 					<p>Interests not listed? Let us know!</p>
 					<input id="other" type="text" placeholder="Separate multiple with commas">
-					<!--<input type="submit" value="Continue">-->
 				</div><!--/.interest-grid-->
 			</form>
 		</section>
 
 	</div><!--/.container-->
 
-	<a href="listings.html"><button id="submit" class="btn btn-large btn-primary">Continue</button></a>
+	<a class="bottom-btn" href="listings.html"><button id="submit" class="btn btn-large btn-primary">Continue</button></a>
 
 	<script src="js/svgcheckbx.js"></script>
 
